--- a/collab-activity.html
+++ b/collab-activity.html
@@ -21,6 +21,11 @@
 
         <label>Create Password:</label>
         <input type="password" id="password" name="password" required>
+
+        <label><input type="radio" name="program" required>Program</label>
+        <label><input type="radio" name="yearlevel" required>Year Level</label>
+
+        <label><input type="checkbox" required>I accept the <a href="#" style="color: #1a75ff;">terms and conditions</a></label>
     </form>
 </body>
 </html>
