--- a/collab-activity.html
+++ b/collab-activity.html
@@ -26,6 +26,10 @@
         <label><input type="radio" name="yearlevel" required>Year Level</label>
 
         <label><input type="checkbox" required>I accept the <a href="#" style="color: #1a75ff;">terms and conditions</a></label>
+
+        <p>
+        The school ensures data protection by adhering to relevant privacy laws, applying encryption, and requiring informed consent before any external sharing
+        </p>
     </form>
 </body>
 </html>
