--- a/collab-activity.html
+++ b/collab-activity.html
@@ -30,6 +30,9 @@
         <p>
         The school ensures data protection by adhering to relevant privacy laws, applying encryption, and requiring informed consent before any external sharing
         </p>
+
+        <label>Birthdate</label>
+        <input type="date">
     </form>
 </body>
 </html>
