--- a/collab-activity.html
+++ b/collab-activity.html
@@ -33,6 +33,9 @@
 
         <label>Birthdate</label>
         <input type="date">
+
+        <label>Bio</label>
+        <textarea placeholder="I love coding on the beach..."></textarea>
     </form>
 </body>
 </html>
