--- a/collab-activity.html
+++ b/collab-activity.html
@@ -36,6 +36,8 @@
 
         <label>Bio</label>
         <textarea placeholder="I love coding on the beach..."></textarea>
+
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
