--- a/collab-activity.html
+++ b/collab-activity.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Form</title>
 </head>
 <body>
     <form>
@@ -28,11 +28,19 @@
         <label><input type="checkbox" required>I accept the <a href="#" style="color: #1a75ff;">terms and conditions</a></label>
 
         <p>
-        The school ensures data protection by adhering to relevant privacy laws, applying encryption, and requiring informed consent before any external sharing
+        The school ensures data protection by adhering to relevant privacy laws, applying encryption, and requiring informed consent before any external sharing.
         </p>
 
         <label>Birthdate</label>
         <input type="date">
+
+        <label>Specialization:</label>
+        <select>
+          <option value="">(select one)</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+        </select>
 
         <label>Bio</label>
         <textarea placeholder="I love coding on the beach..."></textarea>
