--- a/collab-activity.html
+++ b/collab-activity.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
+    <style>
+        body {
+      font-family: Arial, sans-serif;
+      background-color: #1a1a2e;
+      color: white;
+      padding: 20px;
+    }
+    </style>
 </head>
 <body>
     <form>
@@ -25,7 +33,7 @@
         <label><input type="radio" name="program" required>Program</label>
         <label><input type="radio" name="yearlevel" required>Year Level</label>
 
-        <label><input type="checkbox" required>I accept the <a href="#" style="color: #1a75ff;">terms and conditions</a></label>
+        <label><input type="checkbox" required>I accept the <a href="#" style="color: #1a75ff;">terms and conditions</a>.</label>
 
         <p>
         The school ensures data protection by adhering to relevant privacy laws, applying encryption, and requiring informed consent before any external sharing.
