--- a/collab-activity.html
+++ b/collab-activity.html
@@ -5,11 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
     <style>
-        body {
-      font-family: Arial, sans-serif;
-      background-color: #1a1a2e;
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #1a1a2e;
+        color: white;
+        padding: 20px;
+    }
+    form {
+        max-width: 400px;
+        margin: auto;
+        padding: 25px;
+        background-color: #27355c;
+        border-radius: 10px;
+    }
+    select {
+        width: 100%;
+        margin: 8px 0;
+        padding: 8px;
+        box-sizing: border-box;
+    }
+    input {
+        width: 100%;
+        margin: 8px 0;
+        padding: 8px;
+        box-sizing: border-box;
+    }
+    textarea {
+        width: 100%;
+        margin: 8px 0;
+        padding: 8px;
+        box-sizing: border-box;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+    button {
+      margin-top: 15px;
+      padding: 10px;
+      width: 100%;
+    }
+    .extrainfo {
+      font-size: 15px;
       color: white;
-      padding: 20px;
+      text-align: center;
     }
     </style>
 </head>
@@ -35,7 +74,7 @@
 
         <label><input type="checkbox" required>I accept the <a href="#" style="color: #1a75ff;">terms and conditions</a>.</label>
 
-        <p>
+        <p class="extrainfo">
         The school ensures data protection by adhering to relevant privacy laws, applying encryption, and requiring informed consent before any external sharing.
         </p>
 
