--- a/collab-activity.html
+++ b/collab-activity.html
@@ -25,7 +25,6 @@
         box-sizing: border-box;
     }
     input {
-        width: 100%;
         margin: 8px 0;
         padding: 8px;
         box-sizing: border-box;
@@ -50,6 +49,10 @@
       color: white;
       text-align: center;
     }
+    .textinput {
+      width: 100%;
+      background-color: #00008B;
+    }
     </style>
 </head>
 <body>
@@ -58,16 +61,16 @@
         <p>Please Fill out this registration Form</p>
         
         <label>First Name:</label>
-        <input type="text" id="fname" name="fname" required>
+        <input type="text" id="fname" name="fname" required class="textinput">
 
         <label>Last Name:</label>
-        <input type="text" id="lname" name="lname" required>
+        <input type="text" id="lname" name="lname" required class="textinput">
 
         <label>Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required  class="textinput">
 
         <label>Create Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required class="textinput">
 
         <label><input type="radio" name="program" required>Program</label>
         <label><input type="radio" name="yearlevel" required>Year Level</label>
@@ -90,7 +93,7 @@
         </select>
 
         <label>Bio</label>
-        <textarea placeholder="I love coding on the beach..."></textarea>
+        <textarea placeholder="I love coding on the beach..." style="background-color: #00008B; width=100%;"></textarea>
 
         <button type="submit">Submit</button>
     </form>
